add divs and their classes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Photos</title>
   </head>
   <body>
-    
+    <div class="column">
+    </div>
+    <div class="column">
+    </div>
+    <div class="column">
+    </div>
   <body>
 </html>
