--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Photos</title>
   </head>
   <body>
     <div class="column">
+      <h1>Portraits</h1>
+      <img src="images/portrait1.jpg" alt="portrait1">
+      <img src ="images/portrait2.jpeg" alt="portrait2">
+      <img src= "images/portrait3.jpeg" alt="portrait3">
     </div>
     <div class="column">
+      <h1>Nature</h1>
+      <img src="images/nature1.jpeg" alt="nature1">
+      <img src="images/nature2.jpeg" alt="nature2">
+      <img src="images/nature3.jpeg" alt="nature3">
     </div>
     <div class="column">
+      <h1>Weddings</h1>
+      <img src="images/wedd1.jpeg" alt="wedd1">
+      <img src="images/wedd2.jpeg" alt="wedd2">
+      <img src="images/wedd3.jpeg" alt="wedd3">
+
     </div>
   <body>
 </html>
